# ChangeLog for net-libs/ptlib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/ptlib/ChangeLog,v 1.3 2009/07/12 16:19:34 klausman Exp $

  12 Jul 2009; Tobias Klausmann <klausman@gentoo.org> ptlib-2.6.2.ebuild:
  Keyworded on alpha, bug #276278

  06 Jul 2009; Mounir Lamouri <volkmar@gentoo.org> ptlib-2.6.2.ebuild:
  Add die message for conditional USE flags error.

*ptlib-2.6.2 (03 Jul 2009)

  03 Jul 2009; Mounir Lamouri <volkmar@gentoo.org>
  +files/ptlib-2.6.2-gcc-allocator.patch, +metadata.xml,
  +ptlib-2.6.2.ebuild:
  Initial commit. Actually, somewhat bump of dev-libs/pwlib. Fix bug 238617
