@@ -1,6 +1,6 @@
 AUX ptlib-2.6.2-gcc-allocator.patch 429 RMD160 ca2fcdb5cd239d3159e1283ef27338a5264b46de SHA1 4dedb61240c5f88a600003988058630202e1f1f4 SHA256 24d009a49ec7aa2a93a5896346957e1bd9a1b60c52d80edba2bc0159139eea1e
 DIST ptlib-2.6.2-htmldoc.tar.bz2 2102488 RMD160 1001d75b7fdbe148338c68432d9e53bcb27030d0 SHA1 99be5fd1497be42eed7a662038eed08c641c55bb SHA256 41fa3dc92a033de021a40d0e47b9f2e60181fbdf607ec323639846aee501693e
 DIST ptlib-2.6.2.tar.bz2 3309489 RMD160 9606dbf59954138a112b07b6d50ad63d56fbf2e0 SHA1 95ce321c4fec47b7274fde3b65fea0e7699216df SHA256 941ead5179f5bab8dd6e81806b6e52120dc5b98c6ced8128df24639af1eabedd
-EBUILD ptlib-2.6.2.ebuild 8062 RMD160 902ed6bcae8ea1791870ddee5202ca238bb16070 SHA1 c91344305a312807828935425444fd06ba353db7 SHA256 c3f4b8df3a3b1cc9b703bacc733ab8b4c7d0f8411dd8277ac3c9e7375743597a
-MISC ChangeLog 671 RMD160 9bd464c816090b4172e00598e7f8fe724d08913a SHA1 0d53be96935f5c07d79695afc8d21afd6404b151 SHA256 59eb21c79e8ba35f4a78c1ee12c7efecd4fac95c70bb6695ba59c1fa60038858
+EBUILD ptlib-2.6.2.ebuild 8199 RMD160 5f72d3c7acb0400fe9a2d9fb5264df1b81d5ff42 SHA1 2755c8868f413378ad071a481df00c6376376301 SHA256 4b5b767fc6c85a506918eb6aa3977820b9a33c7e76abc78c227267d66d3bf563
+MISC ChangeLog 810 RMD160 339e613b86c0b78f099dda82007f46577953dbc3 SHA1 2eb2242367de4612cd1245af35c385f98c315454 SHA256 bf10c98711278f0837d885e43971579d003d439bf4f9c76cd08544cfe8b75b42
 MISC metadata.xml 1557 RMD160 9fc3acd33e65c9c538f6f82540e29ad2c80e4ea3 SHA1 6e2c60a62ad7d5a343b4d77ffb23b27c55aa9461 SHA256 f37e4390595b04980d5e22d31c549dfac57979b0b2bb63f7c2d4125d9015e92c
